--- a/css/common.css
+++ b/css/common.css
@@ -282,6 +282,24 @@
   .sec-detail .summary dl {
     width: 50% !important;
   }
+  .sec-detail .summary dl:nth-child(2) {
+    padding-right: 0 !important;
+  }
+  .sec-detail .summary dl:nth-child(4) {
+    padding-right: 0 !important;
+  }
+  .sec-detail .summary dl:nth-child(6) {
+    padding-right: 0 !important;
+  }
+  .sec-detail .summary dl:nth-child(1) {
+    padding-right: 10% !important;
+  }
+  .sec-detail .summary dl:nth-child(3) {
+    padding-right: 10% !important;
+  }
+  .sec-detail .summary dl:nth-child(5) {
+    padding-right: 10% !important;
+  }
   .sub-img {
     height: 100% !important;
   }
@@ -852,4 +870,25 @@ body {
   font-family: "Anton", sans-serif;
   font-weight: 400;
   color: white;
+}
+
+.gototop {
+  width: 52px;
+  height: 52px;
+  background: rgba(11, 11, 11, 0.7);
+  border: none;
+  border-radius: 999px;
+  position: fixed;
+  bottom: 24px;
+  right: 24px;
+  cursor: pointer;
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out;
+  z-index: 998;
+}
+.gototop.show {
+  opacity: 1;
+}
+.gototop svg path {
+  fill: white;
 }
