--- a/css/common.scss
+++ b/css/common.scss
@@ -9,6 +9,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=IBM+Plex+Sans:wght@300;500&display=swap');
+
 
 @keyframes loading {
   0% {
@@ -55,6 +57,49 @@
 
   100% {
     transform: translateX(-100%);
+  }
+}
+
+@keyframes change {
+
+  0% {
+      transform: translate3d(0,0,0);
+  }
+
+  10% {
+      transform: translate3d(0,0,0);
+  }
+
+  25% {
+      transform: translate3d(0,-118%,0);
+  }
+
+  35% {
+      transform: translate3d(0,-118%,0);
+  }
+
+  50% {
+      transform: translate3d(0,-233%,0);
+  }
+
+  60% {
+      transform: translate3d(0,-233%,0);
+  }
+
+  75% {
+      transform: translate3d(0,-118%,0);
+  }
+
+  85% {
+      transform: translate3d(0,-118%,0);
+  }
+
+  95% {
+      transform: translate3d(0,0,0);
+  }
+
+  100% {
+      transform: translate3d(0,0,0);
   }
 }
 
@@ -113,6 +158,10 @@
 
   .more-projects {
     padding: 60px 40px !important;
+  }
+
+  .table-contents {
+    display: none !important;
   }
 
 }
@@ -256,6 +305,22 @@
 
   .more-projects {
     padding: 60px 40px !important;
+  }
+
+  .top-visual {
+
+    .blue {
+      flex-direction: column !important;
+
+      .main_text {
+        margin-right: 0 !important;
+        margin-bottom: 16px;
+      }
+    }
+  }
+
+  .table-contents {
+    display: none !important;
   }
 
 }
@@ -460,6 +525,65 @@
         &.next-project-name {
           margin-right: 0 !important;
         }
+      }
+    }
+  }
+
+  .top-visual {
+
+    .blue {
+      flex-direction: column !important;
+      padding: 24px;
+
+      .main_text {
+        margin-right: 0 !important;
+        margin-bottom: 16px;
+        font-size: 54px !important;
+        line-height: 1;
+      }
+
+      ul {
+        font-size: 54px !important;
+      }
+    }
+  }
+
+  .table-contents {
+    display: none !important;
+  }
+
+  .content-wrap {
+
+    .content-inner {
+      display: flex;
+      flex-direction: column;
+      max-width: 1024px;
+      padding: 92px 24px 40px 24px !important;
+
+      h2 {
+        font-size: 28px !important;
+      }
+
+      h3 {
+        font-size: 20px !important;
+      }
+
+      p {
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 1.6;
+        color: $gray_70;
+        margin-top: 12px;
+        font-family: 'IBM Plex Sans', sans-serif;
+      }
+    }
+
+    .content-img {
+      width: 88%;
+
+      img {
+        width: 100%;
+        object-fit: cover;
       }
     }
   }
@@ -863,6 +987,41 @@ body {
       align-items: center;
     }
 
+    .blue {
+      background: $danu_blue_60;
+      width: 100%;
+      height: 100%;
+
+      span {
+        color: white;
+        font-size: 60px;
+        font-family: 'IBM Plex Sans', sans-serif;
+        font-weight: 300;
+
+        &.main_text {
+            margin-right: 24px;
+        }
+    }
+
+    ul {
+        display: flex;
+        flex-direction: column;
+        font-size: 60px;
+        font-weight: 600;
+        color: white;
+        height: 78px;
+        overflow: hidden;
+        padding-top: 5px;
+
+        li {
+            animation: change 10s infinite;
+            margin-bottom: 10px;
+            font-family: 'IBM Plex Sans', sans-serif;
+            font-weight: 700;
+        }
+    }
+    }
+
     img {
       height: 100%;
       width: 100%;
@@ -930,9 +1089,17 @@ body {
       flex-wrap: wrap;
 
       dl {
-        padding-right: 7%;
+        padding-right: 4%;
         width: 33.3%;
         margin-top: 24px;
+
+        &:nth-child(3) {
+          padding-right: 0;
+        }
+
+        &:nth-child(6) {
+          padding-right: 0;
+        }
 
         dt {
           font-size: 14px;
@@ -948,6 +1115,7 @@ body {
           display: flex;
           margin-top: 8px;
           font-size: 14px;
+          line-height: 1.4;
           
           span {
             min-width: 28px;
@@ -1104,11 +1272,118 @@ body {
       }
     }
   }
+
+
+  // 디자인시스템
+  .table-contents {
+    position: sticky;
+    top: 0;
+    right: 0;
+    width: 100%;
+    max-width: 1780px;
+    margin: 0 auto;
+    transition: all 0.2s ease-out;
+    z-index: 1;
+
+    .contents-container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      position: absolute;
+      right: 0;
+      flex-direction: column;
+      top: 60px;
+
+      a {
+        color: $gray_120;
+        font-size: 14px;
+        font-family: 'IBM Plex Sans', sans-serif;
+        font-weight: 500;
+        display: flex;
+        align-items: center;
+        width: 100%;
+        padding: 8px 20px;
+        border-left: 2px solid $gray_20;
+
+        &:hover {
+          color: $danu_blue_60;
+          font-weight: 700;
+          border-left: 2px solid $danu_blue_60;
+        }
+
+        &.active {
+          color: $danu_blue_60;
+          font-weight: 700;
+          border-left: 2px solid $danu_blue_60;
+        }
+      }
+
+    }
+  }
+
+  .content-wrap {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+
+    &.gray {
+      background: $gray_0;
+    }
+
+    .content-inner {
+      display: flex;
+      flex-direction: column;
+      max-width: 1024px;
+      padding: 92px 92px 60px 92px;
+
+      h2 {
+        font-size: 32px;
+        font-weight: 400;
+        line-height: 1.4;
+        letter-spacing: -2px;
+        color: $gray_110;
+        font-family: 'IBM Plex Sans', sans-serif;
+      }
+
+      h3 {
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 1.4;
+        letter-spacing: -2px;
+        color: $gray_110;
+        margin-top: 24px;
+        font-family: 'IBM Plex Sans', sans-serif;
+      }
+
+      p {
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 1.6;
+        color: $gray_70;
+        margin-top: 12px;
+        font-family: 'IBM Plex Sans', sans-serif;
+      }
+    }
+
+    .content-img {
+      max-width: 1024px;
+      display: flex;
+      align-items: center;
+
+      img {
+        width: 100%;
+        object-fit: cover;
+      }
+    }
+  }
 }
 
 .header {
   width: 100%;
-  height: 80px;
+  height: 60px;
   display: flex;
   align-items: center;
   padding: 0 92px;
@@ -1120,7 +1395,7 @@ body {
   z-index: 10;
 
   &.hidden {
-    top: -80px;
+    top: -60px;
   }
 
   &.white-bg {
@@ -1133,8 +1408,8 @@ body {
 
   .go-home {
     font-size: 16px;
-    font-family: 'Anton', sans-serif;
-    font-weight: 400;
+    font-family: 'IBM Plex Sans', sans-serif;;
+    font-weight: 500;
     color: white;
   }
 }
