--- a/css/common.scss
+++ b/css/common.scss
@@ -672,7 +672,7 @@ body {
         animation: wave_reverse 40s infinite linear !important;
 
         h1 {
-          color: $yellow_20 !important;
+          color: $blue_60 !important;
 
           em {
             display: block;
@@ -699,7 +699,7 @@ body {
           white-space: nowrap;
           margin:0;
           line-height: .9;
-          color: $blue_50;
+          color: $green_20;
 
           em {
             display: block;
