--- a/css/common.scss
+++ b/css/common.scss
@@ -46,6 +46,20 @@
   }
 }
 
+@keyframes arrow-next {
+  0% {
+    transform: translateX(-28%);
+  }
+
+  50% {
+    transform: translateX(24%);
+  }
+
+  100% {
+    transform: translateX(-28%);
+  }
+}
+
 @keyframes wave_reverse {
   0% {
     transform: translateX(-100%);
@@ -672,7 +686,7 @@ body {
         animation: wave_reverse 40s infinite linear !important;
 
         h1 {
-          color: $blue_60 !important;
+          color: #c2aef5 !important;
 
           em {
             display: block;
@@ -699,7 +713,7 @@ body {
           white-space: nowrap;
           margin:0;
           line-height: .9;
-          color: $green_20;
+          color: #edb4eb;
 
           em {
             display: block;
@@ -796,13 +810,77 @@ body {
         left: 3vw;
         top: 48vh;
       }
+
+      .obj6 {
+        width: 120px;
+        height: 120px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transform: rotate(-40deg);
+        position: absolute;
+        left: 19vw;
+        top: 24vh;
+        background-color: #cbfc55;
+        color: white;
+        border-radius: 999px;
+        overflow: hidden;
+
+        .arrow-next {
+          animation: arrow-next 4.2s infinite cubic-bezier(0.67, 0, 0.08, 1.48);
+          color: $gray_120;
+        }
+
+        .material-symbols-outlined {
+          font-variation-settings:
+          'FILL' 0,
+          'wght' 500,
+          'GRAD' 0,
+          'opsz' 24;
+          width: 80px;
+          height: 80px;
+          font-size: 80px;
+        }
+      }
+
+      .obj7 {
+        width: 140px;
+        height: 140px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transform: rotate(0deg);
+        position: absolute;
+        left: 70vw;
+        top: 54vh;
+        background-color: $gray_120;
+        color: white;
+        border-radius: 999px;
+        overflow: hidden;
+
+        .arrow-next {
+          animation: arrow-next 4.2s infinite cubic-bezier(0.67, 0, 0.08, 1.48);
+          color: #cbfc55;
+        }
+
+        .material-symbols-outlined {
+          font-variation-settings:
+          'FILL' 0,
+          'wght' 500,
+          'GRAD' 0,
+          'opsz' 24;
+          width: 100px;
+          height: 100px;
+          font-size: 100px;
+        }
+      }
     }
   }
 
   .thum-container {
     width: 100%;
     height: 100%;
-    padding: 16px;
+    padding: 60px 16px;
 
     .thum-area {
       display: flex;
@@ -820,7 +898,7 @@ body {
         }
 
         .thum-item {
-          width: 25%;
+          width: 33.3%;
           display: flex;
           flex-direction: column;
           margin-right: 16px;
