--- a/css/common.css
+++ b/css/common.css
@@ -85,6 +85,10 @@
   }
 }
 @media (min-width: 1024px) and (max-width: 1399px) {
+  .obj7 {
+    left: 66vw !important;
+    top: 58vh !important;
+  }
   .kv-sticker .sticker h2 {
     font-size: 10vw !important;
   }
@@ -129,6 +133,28 @@
   }
 }
 @media (min-width: 768px) and (max-width: 1023px) {
+  .obj6 {
+    width: 120px;
+    height: 120px;
+    left: 19vw;
+    top: 24vh;
+  }
+  .obj6 .material-symbols-outlined {
+    width: 80px;
+    height: 80px;
+    font-size: 80px;
+  }
+  .obj7 {
+    width: 140px !important;
+    height: 140px !important;
+    left: 71vw !important;
+    top: 65vh !important;
+  }
+  .obj7 .material-symbols-outlined {
+    width: 100px !important;
+    height: 100px !important;
+    font-size: 100px !important;
+  }
   .kv-sticker .sticker h2 {
     font-size: 12vw !important;
   }
@@ -237,6 +263,28 @@
   }
 }
 @media (max-width: 767px) {
+  .obj6 {
+    width: 80px !important;
+    height: 80px !important;
+    left: 28vw !important;
+    top: 3vh !important;
+  }
+  .obj6 .material-symbols-outlined {
+    width: 40px !important;
+    height: 40px !important;
+    font-size: 40px !important;
+  }
+  .obj7 {
+    width: 110px !important;
+    height: 110px !important;
+    left: 18vw !important;
+    top: 37vh !important;
+  }
+  .obj7 .material-symbols-outlined {
+    width: 80px !important;
+    height: 80px !important;
+    font-size: 80px !important;
+  }
   .wave h1 {
     font-size: 21vh !important;
   }
@@ -628,15 +676,15 @@ body {
   font-size: 80px;
 }
 .main .top-visual .kv-sticker .obj7 {
-  width: 140px;
-  height: 140px;
+  width: 160px;
+  height: 160px;
   display: flex;
   align-items: center;
   justify-content: center;
   transform: rotate(0deg);
   position: absolute;
-  left: 70vw;
-  top: 54vh;
+  left: 64vw;
+  top: 52vh;
   background-color: #0B0B0B;
   color: white;
   border-radius: 999px;
@@ -648,9 +696,9 @@ body {
 }
 .main .top-visual .kv-sticker .obj7 .material-symbols-outlined {
   font-variation-settings: "FILL" 0, "wght" 500, "GRAD" 0, "opsz" 24;
-  width: 100px;
-  height: 100px;
-  font-size: 100px;
+  width: 120px;
+  height: 120px;
+  font-size: 120px;
 }
 .main .thum-container {
   width: 100%;
