--- a/css/common.css
+++ b/css/common.css
@@ -32,13 +32,13 @@
 }
 @keyframes arrow-next {
   0% {
-    transform: translateX(-28%);
+    transform: translateX(0);
   }
   50% {
-    transform: translateX(24%);
+    transform: translateX(40%);
   }
   100% {
-    transform: translateX(-28%);
+    transform: translateX(0);
   }
 }
 @keyframes wave_reverse {
@@ -264,8 +264,8 @@
 }
 @media (max-width: 767px) {
   .obj6 {
-    width: 80px !important;
-    height: 80px !important;
+    width: 60px !important;
+    height: 60px !important;
     left: 28vw !important;
     top: 3vh !important;
   }
@@ -275,8 +275,8 @@
     font-size: 40px !important;
   }
   .obj7 {
-    width: 110px !important;
-    height: 110px !important;
+    width: 90px !important;
+    height: 90px !important;
     left: 18vw !important;
     top: 37vh !important;
   }
@@ -663,10 +663,9 @@ body {
   background-color: #cbfc55;
   color: white;
   border-radius: 999px;
-  overflow: hidden;
 }
 .main .top-visual .kv-sticker .obj6 .arrow-next {
-  animation: arrow-next 4.2s infinite cubic-bezier(0.67, 0, 0.08, 1.48);
+  animation: arrow-next 2.2s infinite ease-in-out;
   color: #0B0B0B;
 }
 .main .top-visual .kv-sticker .obj6 .material-symbols-outlined {
@@ -688,10 +687,9 @@ body {
   background-color: #0B0B0B;
   color: white;
   border-radius: 999px;
-  overflow: hidden;
 }
 .main .top-visual .kv-sticker .obj7 .arrow-next {
-  animation: arrow-next 4.2s infinite cubic-bezier(0.67, 0, 0.08, 1.48);
+  animation: arrow-next 2.2s infinite ease-out;
   color: #cbfc55;
 }
 .main .top-visual .kv-sticker .obj7 .material-symbols-outlined {
