--- a/css/common.scss
+++ b/css/common.scss
@@ -1112,14 +1112,14 @@ body {
 
     .hero-pc {
       display: flex;
-      height: 100%;
+      width: 100%;
       justify-content: center;
       align-items: center;
     }
 
     .hero-mo {
       display: none;
-      height: 100%;
+      width: 100%;
       justify-content: center;
       align-items: center;
     }
@@ -1296,6 +1296,21 @@ body {
       background-size: contain;
       width: 100%;
       height: 100%;
+    }
+  }
+
+  .full-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+
+    img {
+      background-size: cover;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
   }
 
