--- a/css/common.scss
+++ b/css/common.scss
@@ -137,7 +137,7 @@
   }
 
   .obj1 {
-    width: 22vw !important;
+    width: 36vw !important;
     height: 16vh !important;
     left: 6vw;
     top: 13vh;
@@ -151,7 +151,7 @@
   }
 
   .obj3 {
-    width: 27vw !important;
+    width: 33vw !important;
     height: 16vh !important;
     left: 61vw !important;
     top: 14vh !important;
@@ -224,7 +224,7 @@
   }
 
   .obj1 {
-    width: 26vw !important;
+    width: 44vw !important;
     height: 16vh !important;
     left: 6vw;
     top: 13vh;
@@ -238,7 +238,7 @@
   }
 
   .obj3 {
-    width: 30vw !important;
+    width: 40vw !important;
     height: 16vh !important;
     left: 56vw !important;
     top: 14vh !important;
@@ -256,6 +256,11 @@
     height: 16vh !important;
     left: 6vw !important;
     top: 57vh !important;
+  }
+
+  .obj6 {
+    left: 20vw !important;
+    top: 32vh !important;
   }
 
   .thum-container {
@@ -375,8 +380,8 @@
   .obj6 {
     width: 60px !important;
     height: 60px !important;
-    left: 28vw !important;
-    top: 3vh !important;
+    left: 65vw !important;
+    top: 12vh !important;
 
     .material-symbols-outlined {
       width: 40px !important;
@@ -417,10 +422,10 @@
   }
 
   .obj1 {
-    width: 33vw !important;
+    width: 62vw !important;
     height: 11vh !important;
-    left: 6vw;
-    top: 13vh;
+    left: 6vw !important;
+    top: 8vh !important;
   }
 
   .obj2 {
@@ -431,10 +436,10 @@
   }
 
   .obj3 {
-    width: 40vw !important;
+    width: 55vw !important;
     height: 11vh !important;
-    left: 52vw !important;
-    top: 14vh !important;
+    left: 43vw !important;
+    top: 20vh !important;
   }
 
   .obj4 {
@@ -809,7 +814,7 @@ body {
       }
 
       .obj1 {
-        width: 15vw;
+        width: 30vw;
         height: 20vh;
         display: flex;
         align-items: center;
@@ -833,7 +838,7 @@ body {
       }
 
       .obj3 {
-        width: 19vw;
+        width: 26vw;
         height: 20vh;
         display: flex;
         align-items: center;
@@ -876,7 +881,7 @@ body {
         justify-content: center;
         transform: rotate(-40deg);
         position: absolute;
-        left: 19vw;
+        left: 32vw;
         top: 24vh;
         background-color: #cbfc55;
         color: white;
