--- a/css/common.scss
+++ b/css/common.scss
@@ -60,6 +60,12 @@
   }
 }
 
+@keyframes text-rotate {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 @keyframes wave_reverse {
   0% {
     transform: translateX(-100%);
@@ -207,9 +213,9 @@
     top: 65vh !important;
 
     .material-symbols-outlined {
-      width: 100px !important;
-      height: 100px !important;
-      font-size: 100px !important;
+      width: 60px !important;
+      height: 60px !important;
+      font-size: 60px !important;
     }
   }
 
@@ -378,15 +384,15 @@
 @media (max-width: 767px) {
 
   .obj6 {
-    width: 60px !important;
-    height: 60px !important;
+    width: 90px !important;
+    height: 90px !important;
     left: 65vw !important;
     top: 12vh !important;
 
     .material-symbols-outlined {
-      width: 40px !important;
-      height: 40px !important;
-      font-size: 40px !important;
+      width: 30% !important;
+      height: 30px !important;
+      font-size: 30px !important;
     }
   }
 
@@ -397,9 +403,9 @@
     top: 37vh !important;
 
     .material-symbols-outlined {
-      width: 80px !important;
-      height: 80px !important;
-      font-size: 80px !important;
+      width: 30px !important;
+      height: 30px !important;
+      font-size: 30px !important;
     }
   }
 
@@ -879,16 +885,28 @@ body {
         display: flex;
         align-items: center;
         justify-content: center;
-        transform: rotate(-40deg);
         position: absolute;
         left: 32vw;
         top: 24vh;
         background-color: #cbfc55;
         color: white;
         border-radius: 999px;
+        padding: 8px;
+        transform: rotate(90deg);
+
+        img{
+          animation: text-rotate 6s linear infinite;transform-origin: 50% 50%;
+          position: relative;
+          background-size: contain;
+          width: 100%;
+        }
+
+        span {
+          position: absolute;
+        }
 
         .arrow-next {
-          animation: arrow-next 2.2s infinite ease-in-out;
+          // animation: arrow-next 2.2s infinite ease-in-out;
           color: $gray_120;
         }
 
@@ -898,9 +916,9 @@ body {
           'wght' 500,
           'GRAD' 0,
           'opsz' 24;
-          width: 80px;
-          height: 80px;
-          font-size: 80px;
+          width: 40px;
+          height: 40px;
+          font-size: 40px;
         }
       }
 
@@ -917,9 +935,22 @@ body {
         background-color: $gray_120;
         color: white;
         border-radius: 999px;
+        padding: 8px;
+        transform: rotate(90deg);
+
+        img{
+          animation: text-rotate 6s linear infinite;transform-origin: 50% 50%;
+          position: relative;
+          background-size: contain;
+          width: 100%;
+        }
+
+        span {
+          position: absolute;
+        }
 
         .arrow-next {
-          animation: arrow-next 2.2s infinite ease-out;
+          // animation: arrow-next 2.2s infinite ease-out;
           color: #cbfc55;
         }
 
@@ -929,9 +960,9 @@ body {
           'wght' 500,
           'GRAD' 0,
           'opsz' 24;
-          width: 120px;
-          height: 120px;
-          font-size: 120px;
+          width: 60px;
+          height: 60px;
+          font-size: 60px;
         }
       }
     }
